Add Twine project and link

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <div class="content">
                 <h3>Vzdělávací technologie</h3>
                 <p>E-learning, LMS systémy a AI ve vzdělávání...</p>
+                <a href="projekty/financni-gramotnost.html" target="_blank" class="project-link">► Zahrát si hru o finanční gramotnosti (Twine)</a>
                 <div class="read-more">Číst recenzi &rarr;</div>
 
                 <div class="full-text">
