Fix project link click

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
         <div class="semester-label">1. SEMESTR</div>
 
-        <div class="card-wrapper left" onclick="openModal(this)">
-            <div class="content">
+        <div class="card-wrapper left">
+            <div class="content" onclick="openModal(this.parentElement)">
                 <h3>Informační vědy</h3>
                 <p>Teoretický základ oboru, práce s daty a definice informace...</p>
                 <div class="read-more">Číst recenzi &rarr;</div>
@@ -56,8 +56,8 @@
             </div>
         </div>
 
-        <div class="card-wrapper right" onclick="openModal(this)">
-            <div class="content">
+        <div class="card-wrapper right">
+            <div class="content" onclick="openModal(this.parentElement)">
                 <h3>Literatura, knihovní procesy a trh</h3>
                 <p>Cesta knihy od vydavatele až na regál v knihovně...</p>
                 <div class="read-more">Číst recenzi &rarr;</div>
@@ -70,8 +70,8 @@
             </div>
         </div>
 
-        <div class="card-wrapper left" onclick="openModal(this)">
-            <div class="content">
+        <div class="card-wrapper left">
+            <div class="content" onclick="openModal(this.parentElement)">
                 <h3>DISRI</h3>
                 <p>Pohled na design z jiné perspektivy, behaviorální design a role designu ve společnosti...</p>
                 <div class="read-more">Číst recenzi &rarr;</div>
@@ -85,8 +85,8 @@
             </div>
         </div>
 
-        <div class="card-wrapper right" onclick="openModal(this)">
-            <div class="content">
+        <div class="card-wrapper right">
+            <div class="content" onclick="openModal(this.parentElement)">
                 <h3>Elements of AI</h3>
                 <p>Úvod do principů umělé inteligence, strojového učení a neuronových sítí...</p>
                 <div class="read-more">Číst recenzi &rarr;</div>
@@ -100,12 +100,12 @@
             </div>
         </div>
 
-        <div class="card-wrapper left" onclick="openModal(this)">
+        <div class="card-wrapper left">
             <div class="content">
                 <h3>Vzdělávací technologie</h3>
                 <p>E-learning, LMS systémy a AI ve vzdělávání...</p>
                 <a href="projekty/financni-gramotnost.html" target="_blank" class="project-link">► Zahrát si hru o finanční gramotnosti (Twine)</a>
-                <div class="read-more">Číst recenzi &rarr;</div>
+                <div class="read-more" onclick="openModal(this.parentElement.parentElement)">Číst recenzi &rarr;</div>
 
                 <div class="full-text">
                     <p>Původně jsem si předmět zapsal spíš "do počtu", ale nakonec toho nelituju. Velkou zásluhu má doc. Michal Černý a jeho poutavý styl přednášení. Kurz byl časově náročný a plný úkolů, ale díky praktickému zaměření mě to bavilo. Vyzkoušel jsem si řadu nových nástrojů, ke kterým bych se jinak nedostal.</p>
@@ -116,8 +116,8 @@
             </div>
         </div>
 
-        <div class="card-wrapper right" onclick="openModal(this)">
-            <div class="content">
+        <div class="card-wrapper right">
+            <div class="content" onclick="openModal(this.parentElement)">
                 <h3>Around the world with academic libraries</h3>
                 <p>Pohled na fungování akademických knihoven v zahraničí...</p>
                 <div class="read-more">Číst recenzi &rarr;</div>
@@ -131,8 +131,8 @@
             </div>
         </div>
 
-        <div class="card-wrapper left" onclick="openModal(this)">
-            <div class="content">
+        <div class="card-wrapper left">
+            <div class="content" onclick="openModal(this.parentElement)">
                 <h3>Seminář k diplomové práci I: Východiska a metodologie</h3>
                 <p>Přehled témat pro diplomovou práci a seznámení s metodologií...</p>
                 <div class="read-more">Číst recenzi &rarr;</div>
@@ -148,8 +148,8 @@
 
         <div class="semester-label">2. SEMESTR</div>
 
-        <div class="card-wrapper right" onclick="openModal(this)">
-            <div class="content">
+        <div class="card-wrapper right">
+            <div class="content" onclick="openModal(this.parentElement)">
                 <h3>Učící se společnost</h3>
                 <p>Klíčové texty a koncepty vzdělávání v moderní společnosti...</p>
                 <div class="read-more">Číst recenzi &rarr;</div>
@@ -158,8 +158,8 @@
             </div>
         </div>
 
-        <div class="card-wrapper left" onclick="openModal(this)">
-            <div class="content">
+        <div class="card-wrapper left">
+            <div class="content" onclick="openModal(this.parentElement)">
                 <h3>Základy marketingu</h3>
                 <p>Principy marketingové komunikace a strategie...</p>
                 <div class="read-more">Číst recenzi &rarr;</div>
@@ -168,8 +168,8 @@
             </div>
         </div>
 
-        <div class="card-wrapper right" onclick="openModal(this)">
-            <div class="content">
+        <div class="card-wrapper right">
+            <div class="content" onclick="openModal(this.parentElement)">
                 <h3>Informační chování</h3>
                 <p>Analýza způsobů, jak lidé vyhledávají a zpracovávají informace...</p>
                 <div class="read-more">Číst recenzi &rarr;</div>
