Add link to DISRI PDF

--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
         </div>
 
         <div class="card-wrapper left">
-            <div class="content" onclick="openModal(this.parentElement)">
+            <div class="content">
                 <h3>DISRI</h3>
                 <p>Pohled na design z jiné perspektivy, behaviorální design a role designu ve společnosti...</p>
-                <div class="read-more">Číst recenzi &rarr;</div>
+                <a href="projekty/DISRI_Paradox nápravy.pdf" target="_blank" class="project-link">► Zobrazit anotované portfolio (PDF)</a>
+                <div class="read-more" onclick="openModal(this.parentElement.parentElement)">Číst recenzi &rarr;</div>
 
                 <div class="full-text">
                     <p>Před kurzem jsem si myslel, že design je primárně o web designu a estetice. Zpětně vidím, jak zjednodušený ten pohled byl. Během semestru jsem zjistil, že jádro designu leží jinde. Velkým přínosem byla atmosféra v hodinách a hostující lektoři – zejména Vojtěch Velíšek a jeho přednáška o AI v designu.</p>
