Fix DISRI PDF link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <p>Původně jsem si předmět zapsal spíš "do počtu", ale nakonec toho nelituju. Velkou zásluhu má doc. Michal Černý a jeho poutavý styl přednášení. Kurz byl časově náročný a plný úkolů, ale díky praktickému zaměření mě to bavilo. Vyzkoušel jsem si řadu nových nástrojů, ke kterým bych se jinak nedostal.</p>
                     <p>Ze všech nástrojů mě nejvíc bavil Twine, ve kterém jsem tvořil hru o finanční gramotnosti. Hodně mi utkvěl taky Webflow – aplikace využívající AI k tvorbě webu. Zaujal mě i úkol pro KPI, kde jsem přemýšlel nad finanční udržitelností vzdělávacího projektu. Naopak nutným zlem byla práce s Moodlem, prostředí které snad bylo stvořeno aby s ním nikdo nechtěl pracovat.</p>
                     <p>S odstupem vidím velký kontrast oproti době, kdy jsem chodil na střední školu (nutno dodat, že je to doba, kdy jsem dostal svůj první dotykový telefon). Kdybychom se tehdy učili formou příběhů v Twine nebo měli Makerspace s 3D tiskem, výuka by vypadala úplně jinak. Návštěva Makerspace v knihovně FF mi ukázala, jak interaktivní může dnešní vzdělávání být.</p>
-                    <p>Odnáším si přehled o nových technologiích a jiný pohled na vzdělávání. V budoucnu plánuju víc využívat Twine a navštívit Makerspace na FF, abych si tam vyzkoušel realizovat vlastní projekty.</p>
+                    <p>Odnáším si přehled o nových technologií a jiný pohled na vzdělávání. V budoucnu plánuju víc využívat Twine a navštívit Makerspace na FF, abych si tam vyzkoušel realizovat vlastní projekty.</p>
                 </div>
             </div>
         </div>
