feat: Přidání otáčecí profilové fotky

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         <h1>Štěpán Galousek</h1>
         <p class="subtitle">Student Informačních studií a knihovnictví</p>
         
-        <img src="images/portret.jpg" alt="Portrét Štěpána Galouska" class="profile-pic">
+        <div class="profile-pic-container">
+            <div class="profile-pic-flipper">
+                <img src="images/portret.jpg" alt="Portrét Štěpána Galouska (neformální)" class="profile-pic profile-pic-front">
+                <img src="images/portret_formal.jpg" alt="Portrét Štěpána Galouska (formální)" class="profile-pic profile-pic-back">
+            </div>
+        </div>
         
         <div class="bio-container">
             <div class="bio-section">
