feat: Aktualizovány texty v úvodní sekci (Kdo jsem, Motivace, Cíle)

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
         
         <div class="bio-container">
             <div class="bio-section">
-                <strong>Kdo jsem?</strong>
-                Ahoj, jmenuji se Štěpán a jsem studentem prvního ročníku navazujícího studia na KISKu. Jsem člověk, kterého baví spousta věcí. Rád objevuji a zkouším nové koníčky, i když u všeho nevydržím věčně a mé zájmy se časem mění. Poslední dobou jsem se ponořil do financí – čtu o tom knihy, sleduji trhy i vývoj společností a učím se investovat. Mimo to provozuji s bráchou vinárnu, což mi dává dost zabrat, ale je to fajn zkušenost. Dříve jsem při cestování hodně fotil, dnes už na to nemám tolik času, ale občas si něco cvaknu – bavila mě hlavně následná úprava fotek. A když chci úplně vypnout, rád si zahraju nějakou strategii na PC.
+                <p><strong style="color: var(--accent-color); font-size: 1.1rem; display: inline;">Ahoj, jsem Štěpán.</strong> Student KISKu. A co dělám, když zrovna nestuduji?</p>
+                <p>Rád zkouším nové věci a mé zájmy se v čase dost mění. Momentálně mě nejvíc baví svět investic a burzy, který ale teď pomalu začíná vytláčet vibecoding. Mimo školu a grafy trávím čas prací ve vinárně, kterou provozujeme s bráchou, což mě učí, jak funguje byznys v praxi. A když chci úplně vypnout? Zapínám PC. Dřív jsem hodně fotil, dneska už spíš relaxuji u her. Někdy si dám kvalitní strategii, ale poslední dobou mě chytly kooperačky s přáteli.</p>
             </div>
 
             <div class="bio-section">
                 <strong>Moje motivace</strong>
-                Pro tento obor jsem se rozhodl, protože mě baví objevovat nové věci a neustrnout na místě. Dnešní doba je rychlá, někdy až divoká, a KISK vnímám jako místo, kde si můžu v tomhle chaosu rozšířit obzory. Zajímají mě nové technologie a to, co se reálně používá v praxi. Nejde mi ale jen o nástroje samotné – s nástupem AI se mění i pravidla informační gramotnosti a já chci pochopit, jak se v tom orientovat. Chci být u toho a zkoušet věci teď, když se ta pravidla teprve tvoří.
+                <p>Ke studiu se vracím po několika letech. Chyběla mi akademická půda, nové podněty a komunita lidí, se kterými se o tom dá diskutovat. KISK beru jako prostor, kde můžu po vlastní ose zkoumat současný nástup AI. Chci chápat, jak mění informační gramotnost a jak se v tom orientovat. Zároveň mě zajímá, jaké nové možnosti lidem přináší – třeba právě v oblasti vzdělávání. A v neposlední řadě bych tu chtěl víc přičuchnout k designu, který mě dlouhodobě láká.</p>
             </div>
 
             <div class="bio-section">
                 <strong>Očekávání a Cíl</strong>
-                Od studia čekám hlavně to, že nezůstaneme jen u teorie. Chci si nové technologie a nástroje rovnou osahat a zkoušet na reálných věcech. Taky doufám, že potkám lidi, kteří to berou podobně a budeme se moct vzájemně inspirovat. Zkrátka, aby mě škola naučila orientovat se v tom množství informací, co na nás každý den padá. Mým cílem je odcházet s pocitem, že rozumím nástrojům, které hýbou světem, a umím je reálně využít. Ať už v podnikání, při investování nebo prostě v životě. Nechci se jen naučit "jak to funguje", ale hlavně "jak to použít".
+                <p>Doufám, že nezůstaneme jen u teorie. Chci si nové technologie a nástroje rovnou osahat a zkoušet na reálných projektech. Stejně důležití jsou pro mě lidé – těším se, že potkám spolužáky na stejné vlně, se kterými se budeme vzájemně inspirovat. Mým cílem je naučit se filtrovat informační chaos a odcházet s pocitem, že nástrojům, které hýbou světem, nejen rozumím, ale umím je i reálně využít. Ať už v podnikání, při investování, nebo prostě v životě. Nejde mi o to umět nazpaměť definice, ale vědět, jak to použít v praxi.</p>
             </div>
         </div>
         
