Oprava zarovnání poznámky pod fotkou

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css?v=1.3">
+    <link rel="stylesheet" href="style.css?v=1.5">
 </head>
 <body>
 
@@ -25,6 +25,8 @@
         </div>
         
         <div class="bio-container">
+             <p class="photo-caption"><em>Malé přiznání k fotkám: Ta barevná je autentická, jen už trochu archivní. A ta černobílá? To je ukázka toho, když po ruce nemáte formální portrét a necháte umělou inteligenci, aby vás narychlo "zprofesionalizovala".</em></p>
+
             <div class="bio-section">
                 <p><strong style="color: var(--accent-color); font-size: 1.1rem; display: inline;">Ahoj, jsem Štěpán.</strong> Student KISKu. A co dělám, když zrovna nestuduji?</p>
                 <p>Rád zkouším nové věci a mé zájmy se v čase dost mění. Momentálně mě nejvíc baví svět investic a burzy, který ale teď pomalu začíná vytláčet vibecoding. Mimo školu a grafy trávím čas prací ve vinárně, kterou provozujeme s bráchou, což mě učí, jak funguje byznys v praxi. A když chci úplně vypnout? Zapínám PC. Dřív jsem hodně fotil, dneska už spíš relaxuji u her. Někdy si dám kvalitní strategii, ale poslední dobou mě chytly kooperačky s přáteli.</p>
